--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
+
+
+
+spring.secretkey: "sakjbhaskjcdhaiubshLKVAShfbdw68asd65d"
+spring.tempo_expiracao: 5
