--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,13 @@ spring.jpa.show-sql=true
 
 spring.secretkey: "sakjbhaskjcdhaiubshLKVAShfbdw68asd65d"
 spring.tempo_expiracao: 5
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mucamgpw@gmail.com
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+
