--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -52,4 +52,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/apimtx-spring:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/aulafull20252:latest
